--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,9 @@
 body {
   background-color: var(--swatch-foundation);
 }
-
 #root {
   background-color: var(--swatch-primary);
-  font-family: serif;
+  font-family: Tangerine;
   position: absolute;
   width: 80%;
   left: 10%;
@@ -47,7 +46,7 @@ body {
   background-image: linear-gradient(to bottom,         
   #b8b808, #636723);
   color: white;
-  font-size: 54pt;
+  font-size: 35pt;
   border-color: black;
   border-width: 2px;
   border-style: solid;
@@ -58,7 +57,7 @@ body {
   grid-column: 1 / 2;
   grid-row: 2 / 3;
   text-align:center;
-  font-size: 36pt;
+  font-size: 20pt;
   font-weight: bold;
   display:flex;
   flex-direction: row;
@@ -157,8 +156,13 @@ body {
   display:flex;
   align-items: center;
   font-size: 24pt;
-  height:20%;
+  margin: 15px;
+  padding: 25px;
+  border-radius: 25px;
+  background-color: var(--swatch-complement) ;
+  /* height:20%; */
 }
+
 
 input {
   font-size:20pt;
